--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -15,7 +15,11 @@
 	},
 
 	// Add the IDs of extensions you want installed when the container is created.
-	"extensions": [],
+	"extensions": [
+		"coenraads.bracket-pair-colorizer",
+		"oderwat.indent-rainbow",
+		"mhutchie.git-graph",
+	],
 
 	// .sshを$HOMEに移動
 	"postStartCommand": "cp -r .ssh $HOME"
