Change dockerfile base image from ubuntu to golang

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,7 +3,7 @@
 {
 	"name": "CA TECH DOJO",
 
-	"workspaceFolder": "/workspace/ca-tech-dojo",
+	"workspaceFolder": "/ca-tech-dojo",
 
 	// Update the 'dockerFile' property if you aren't using the standard 'Dockerfile' filename.
 	"dockerComposeFile": "../docker-compose.yml",
